syntax = "proto3";

package customer.v1;

option go_package = "github.com/core-banking/services/customer-service/internal/proto/customerpb";

import "google/protobuf/timestamp.proto";

// CustomerService provides customer management operations
service CustomerService {
  // CreateCustomer creates a new customer
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  
  // GetCustomer retrieves a customer by ID
  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  
  // UpdateCustomer updates an existing customer
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
  
  // SearchCustomers searches for customers based on filters
  rpc SearchCustomers(SearchCustomersRequest) returns (SearchCustomersResponse);
  
  // AddAddress adds a new address to a customer
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
  
  // AddDocument adds a new document to a customer
  rpc AddDocument(AddDocumentRequest) returns (AddDocumentResponse);
  
  // UpdateCustomerStatus updates the status of a customer
  rpc UpdateCustomerStatus(UpdateCustomerStatusRequest) returns (UpdateCustomerStatusResponse);
  
  // GetCustomerFullProfile retrieves the complete customer profile including addresses and documents
  rpc GetCustomerFullProfile(GetCustomerRequest) returns (CustomerFullProfileResponse);
}

// Customer represents a customer in the system
message Customer {
  string id = 1;
  string customer_number = 2;
  string first_name = 3;
  string middle_name = 4;
  string last_name = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  string email = 7;
  string phone = 8;
  string status = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  string created_by = 12;
  string updated_by = 13;
  int32 version = 14;
}

// Address represents a customer's address
message Address {
  string id = 1;
  string customer_id = 2;
  string address_type = 3;
  string street1 = 4;
  string street2 = 5;
  string city = 6;
  string state = 7;
  string postal_code = 8;
  string country = 9;
  bool is_primary = 10;
  google.protobuf.Timestamp valid_from = 11;
  google.protobuf.Timestamp valid_to = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

// Document represents a customer's identification document
message Document {
  string id = 1;
  string customer_id = 2;
  string document_type = 3;
  string document_number = 4;  // Encrypted in transit
  string issuing_authority = 5;
  string issuing_country = 6;
  google.protobuf.Timestamp issue_date = 7;
  google.protobuf.Timestamp expiry_date = 8;
  string verification_status = 9;
  google.protobuf.Timestamp verified_at = 10;
  string verified_by = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

// StatusChange records a customer status change
message StatusChange {
  string id = 1;
  string customer_id = 2;
  string previous_status = 3;
  string new_status = 4;
  string reason = 5;
  string changed_by = 6;
  google.protobuf.Timestamp changed_at = 7;
}

// CreateCustomerRequest is the request for creating a customer
message CreateCustomerRequest {
  string first_name = 1;
  string middle_name = 2;
  string last_name = 3;
  google.protobuf.Timestamp date_of_birth = 4;
  string tax_id = 5;  // Encrypted in transit
  string email = 6;
  string phone = 7;
  string created_by = 8;
}

// CreateCustomerResponse is the response for creating a customer
message CreateCustomerResponse {
  Customer customer = 1;
}

// GetCustomerRequest is the request for getting a customer
message GetCustomerRequest {
  string id = 1;
}

// GetCustomerResponse is the response for getting a customer
message GetCustomerResponse {
  Customer customer = 1;
}

// UpdateCustomerRequest is the request for updating a customer
message UpdateCustomerRequest {
  string id = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  string tax_id = 6;  // Encrypted in transit
  string email = 7;
  string phone = 8;
  string updated_by = 9;
  int32 version = 10;
}

// UpdateCustomerResponse is the response for updating a customer
message UpdateCustomerResponse {
  Customer customer = 1;
}

// SearchCustomersRequest is the request for searching customers
message SearchCustomersRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string status = 5;
  google.protobuf.Timestamp from_date = 6;
  google.protobuf.Timestamp to_date = 7;
  int32 limit = 8;
  int32 offset = 9;
}

// SearchCustomersResponse is the response for searching customers
message SearchCustomersResponse {
  repeated Customer customers = 1;
  int32 total = 2;
}

// AddAddressRequest is the request for adding an address
message AddAddressRequest {
  string customer_id = 1;
  string address_type = 2;
  string street1 = 3;
  string street2 = 4;
  string city = 5;
  string state = 6;
  string postal_code = 7;
  string country = 8;
  bool is_primary = 9;
  google.protobuf.Timestamp valid_from = 10;
  google.protobuf.Timestamp valid_to = 11;
}

// AddAddressResponse is the response for adding an address
message AddAddressResponse {
  Address address = 1;
}

// AddDocumentRequest is the request for adding a document
message AddDocumentRequest {
  string customer_id = 1;
  string document_type = 2;
  string document_number = 3;  // Encrypted in transit
  string issuing_authority = 4;
  string issuing_country = 5;
  google.protobuf.Timestamp issue_date = 6;
  google.protobuf.Timestamp expiry_date = 7;
}

// AddDocumentResponse is the response for adding a document
message AddDocumentResponse {
  Document document = 1;
}

// UpdateCustomerStatusRequest is the request for updating customer status
message UpdateCustomerStatusRequest {
  string id = 1;
  string new_status = 2;
  string reason = 3;
  string changed_by = 4;
}

// UpdateCustomerStatusResponse is the response for updating customer status
message UpdateCustomerStatusResponse {
  Customer customer = 1;
  StatusChange status_change = 2;
}

// CustomerFullProfileResponse contains the complete customer profile
message CustomerFullProfileResponse {
  Customer customer = 1;
  repeated Address addresses = 2;
  repeated Document documents = 3;
  repeated StatusChange status_history = 4;
}
